# fpga-ip-access

./: .gitignore  CMakeLists.txt  README.md
fpga_ip_access_lib/: CMakeLists.txt
fpga_ip_access_lib/common/: CMakeLists.txt
fpga_ip_access_lib/common/cmake/: version.cmake
fpga_ip_access_lib/common/inc/: intel_fpga_api_cmn_dfl.h  intel_fpga_api_cmn_inf.h  intel_fpga_api_cmn_msg.h  intel_fpga_api_cmn_version.h.in
fpga_ip_access_lib/common/src/: intel_fpga_api_cmn_dfl.c  intel_fpga_api_cmn_inf.c  intel_fpga_api_cmn_msg.c
fpga_ip_access_lib/common/test/: CMakeLists.txt
fpga_ip_access_lib/common/test/utst/: CMakeLists.txt  intel_fpga_api_hier_dfl_test.cpp  intel_fpga_api_param_block_test.cpp  intel_fpga_api_single_dfl_test.cpp  intel_fpga_api_three_dfl_generator.cpp  intel_fpga_platform_uio_utst.cpp
fpga_ip_access_lib/devmem/: CMakeLists.txt  README.md
fpga_ip_access_lib/devmem/inc/: intel_fpga_api.h  intel_fpga_api_devmem.h  intel_fpga_platform.h  intel_fpga_platform_api.h  intel_fpga_platform_api_devmem.h  intel_fpga_platform_devmem.h
fpga_ip_access_lib/devmem/src/: intel_fpga_api_devmem.c  intel_fpga_platform_api_devmem.c
fpga_ip_access_lib/devmem/test-dfl/: CMakeLists.txt  dfl_show_main.c
fpga_ip_access_lib/devmem/test/utst/: CMakeLists.txt  intel_fpga_api_devmem_test.cpp  intel_fpga_platform_api_devmem_test.cpp
fpga_ip_access_lib/doc/: CMakeLists.txt  README.md  fpga_ip_access_api.doxygen  intel_fpga_api.h  intel_fpga_platform.h  intel_fpga_platform_api.h
fpga_ip_access_lib/uio/: CMakeLists.txt  README.md
fpga_ip_access_lib/uio/inc/: intel_fpga_api.h  intel_fpga_api_uio.h  intel_fpga_platform.h  intel_fpga_platform_api.h  intel_fpga_platform_uio.h
fpga_ip_access_lib/uio/src/: intel_fpga_api_uio.c  intel_fpga_platform_api_uio.c
fpga_ip_access_lib/uio/test/interrupt/: CMakeLists.txt  main.c
fpga_ip_access_lib/uio/test/utst/: CMakeLists.txt  intel_fpga_api_uio_test.cpp  intel_fpga_platform_api_uio_test.cpp
fpga_ip_access_lib/zephyr/: CMakeLists.txt  prj.conf
fpga_ip_access_lib/zephyr/boards/: niosv_g.overlay
fpga_ip_access_lib/zephyr/inc/: intel_fpga_api.h  intel_fpga_api_zephyr.h  intel_fpga_platform.h  intel_fpga_platform_api.h  intel_fpga_platform_api_zephyr.h  intel_fpga_platform_zephyr.h
fpga_ip_access_lib/zephyr/src/: intel_fpga_api_zephyr.c  intel_fpga_platform_api_zephyr.c
fpga_ip_access_lib/zephyr/test/: main.c
